tests/lean/bad_inaccessible.lean.expected.out
bad_inaccessible.lean:3:5: error: invalid use of inaccessible term, it is not fixed by other arguments
bad_inaccessible.lean:6:7: error: invalid use of inaccessible term, the provided term is
  b
but is expected to be
  a
bad_inaccessible.lean:14:3: error: invalid use of inaccessible term, it is not completely fixed by other arguments
  .?m_1 + 1
